# tst

./: .gitignore  .htaccess  .netlifyignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _headers  index.html  index.template.html  lighthouserc.json  netlify.toml  package-lock.json  package.json  pyproject.toml  req.gen.txt  req.test2.txt  requirements-dev.txt  requirements.txt  robots.txt  site.webmanifest  sitemap.xml  sw.js  tailwind.config.js
.github/: dependabot.yml
css/: animations.css  base.css  documents.css  fonts.css  hero-table.css  hero-visual.css  hero.css  info.css  layout.css  navigation-aids.css  search-filters.css  styles.built.css  styles.css  tailwind-input.css
data/: brand-theme.json  documents.json
docs/: plan-industrialisation.md
fic/: V12_statuts_club_LTT.html  V2_PV_AG1.html  V2_fiche_inscription.html  V5_reglement_interieur_clubLTT.html
js/: app.js  ltt-back-to-top.js  ltt-constants.js  ltt-document-filter.js  ltt-document-navigator.js  ltt-document-spy.js  ltt-document-theme.js  ltt-images.js  ltt-search-shortcuts.js  ltt-sw-register.js  ltt-theme-core.js  ltt-theme-manager.js  tailwind.config.js  theme-init.js
logo/: V5_logo_fonds_clairs-256.avif  V5_logo_fonds_clairs-768.avif  V5_logo_fonds_clairs-96.avif  V5_logo_fonds_sombres-256.avif  V5_logo_fonds_sombres-768.avif  V5_logo_fonds_sombres-96.avif
partials/: doc-card-fiche.html  doc-card-flyer.html  doc-card-maillot.html  doc-card-pv.html  doc-card-reglement.html  doc-card-statuts.html  documents-header.html  footer.html  head.html  header.html  hero.html  (+1 more)
(+24 files in other folders)
